--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^9.0.0",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^5.3.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
